--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "replicate": "^0.25.1",
-    "stripe": "^14.21.0"
+    "stripe": "^14.21.0",
+    "use-debounce": "^10.0.6"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
