--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^1.0.3",
+    "@react-email/render": "^2.0.1",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.39.7",
@@ -17,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "replicate": "^0.25.1",
+    "resend": "^6.6.0",
     "stripe": "^14.21.0",
     "use-debounce": "^10.0.6"
   },
