--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.39.7",
     "lucide-react": "^0.344.0",
+    "mixpanel-browser": "^2.73.0",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-facebook-pixel": "^1.0.4",
     "replicate": "^0.25.1",
     "resend": "^6.6.0",
     "stripe": "^14.21.0",
